Make sure to keep a gap between blue partials

--- a/app/assets/stylesheets/components/pages/_padded-box.scss
+++ b/app/assets/stylesheets/components/pages/_padded-box.scss
@@ -24,7 +24,7 @@
 .padded-box--resources {
 		padding: 3rem 1rem 1rem 2rem;
 
-  @include govuk-media-query($from: desktop) {
+  @include govuk-media-query($from: tablet) {
 		margin-top: 2.2rem;
 		padding: 2rem 2rem 1rem 4rem;
 	}
